--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
 <html>
-
+  <header>
+    <script>
+      window.location.href = 'https://www.facebook.com/personal.leandrolima';
+    </script>
+  </header>
 </html>
